--- a/_notes/notes.html
+++ b/_notes/notes.html
@@ -13,7 +13,7 @@ header:
 
   		<dl class="accordion" data-accordion>
   			{% assign counter = 1 %}
-  			{% for post in site.posts limit:1000 %}
+  			{% for post in site.notes limit:1000 %}
   			<dd class="accordion-navigation">
   			<a href="#panel{{ counter }}"><span class="iconfont"></span> {% if post.subheadline %}{{ post.subheadline }} › {% endif %}<strong>{{ post.title }}</strong></a>
   				<div id="panel{{ counter }}" class="content">
