--- a/notes/archive.html
+++ b/notes/archive.html
@@ -5,7 +5,7 @@ teaser: "Work flow"
 breadcrumb: true
 header:
    image_fullwidth: header_unsplash_8.jpg
-permalink: "notes/archive/"
+permalink: "/notes/archive/"
 ---
 <div id="blog-index" class="row">
 	<div class="small-12 columns t30">
