--- a/notes/archive.html
+++ b/notes/archive.html
@@ -15,6 +15,7 @@ permalink: "/notes/archive/"
 		<dl class="accordion" data-accordion>
 			{% assign counter = 1 %}
 			{% for post in site.posts limit:1000 %}
+      {% if post.categories contains 'notes' %}
 			<dd class="accordion-navigation">
 			<a href="#panel{{ counter }}"><span class="iconfont"></span> {% if post.subheadline %}{{ post.subheadline }} › {% endif %}<strong>{{ post.title }}</strong></a>
 				<div id="panel{{ counter }}" class="content">
@@ -23,6 +24,7 @@ permalink: "/notes/archive/"
 				</div>
 			</dd>
 			{% assign counter=counter | plus:1 %}
+      {% endif %}
 			{% endfor %}
 		</dl>
 	</div><!-- /.small-12.columns -->
